<resources>
    <string name="app_name">SlotApp</string>
    <string name="first_text">一等</string>
    <string name="second_text">二等</string>
    <string name="third_text">三等</string>
    <string name="forth_text">四等</string>
    <string name="start_text">スタート</string>
    <string name="stop_text">ストップ</string>
    <string name="return_text">戻る</string>
    <string name="title_activity_data">dataActivity</string>
    <string name="history_text">履歴</string>
    <string name="edit_text">お名前とご住所を入力！</string>
    <string name="address">ご住所</string>
    <string name="name">お名前</string>
    <string name="save_text">保存</string>
    <string name="postal_text">郵便番号</string>
    <string name="service_text">データ保存開始</string>
    <string name="halt_service_text">データ保存終了</string>
    <string name="enter_text">AC</string>
    <string name="minus_text">-</string>
    <string name="number_text">本数</string>
    <string name="result_text">賞金</string>
    <string name="payoff_text">集計(csvデータに保存)</string>
    <string name="admin_text">管理者用</string>
    <string name="admin_setting_text">管理者用設定画面</string>
    <string name="dataClear_text">データクリア</string>
    <string name="cancel_text">キャンセル</string>
    <string name="confirm_text">決定</string>
    <string name="firstExcel">一等のcsvデータ保存</string>
    <string name="secondExcel">二等のcsvデータ保存</string>
    <string name="thirdExcel">三等のcsvデータ保存</string>
    <string name="add">追加</string>
    <string name="number">番号</string>
    <string name="num_balls">num_balls</string>
    <string name="add_balls">玉追加</string>
    <string name="deposit">入金</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="input_error">エラー!入力に誤りがあります！</string>
    <string name="title_activity_history">HistoryActivity</string>
</resources>
