<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:backgroundTint="#FFFFFF"
    tools:context=".RewardActicity">

    <Button
        android:id="@+id/depositBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/start_text"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintLeft_toRightOf="@id/editBtn"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/stop_text"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/digit6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/depositBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/stop_text"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="@id/depositBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/depositBtn"
        app:layout_constraintRight_toRightOf="@id/depositBtn"
        app:layout_constraintTop_toTopOf="@id/depositBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/return_text"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="@id/depositBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/depositBtn"
        app:layout_constraintRight_toRightOf="@id/depositBtn"
        app:layout_constraintTop_toTopOf="@id/depositBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/digit"
        android:layout_width="180dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        app:srcCompat="@drawable/wyen" />

    <ImageView
        android:id="@+id/digit2"
        android:layout_width="180dp"
        android:layout_height="400dp"
        android:layout_marginLeft="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/digit"
        app:layout_constraintLeft_toRightOf="@id/digit"
        app:layout_constraintTop_toTopOf="@id/digit"
        app:srcCompat="@drawable/w0" />

    <ImageView
        android:id="@+id/digit3"
        android:layout_width="180dp"
        android:layout_height="400dp"
        app:layout_constraintLeft_toRightOf="@id/digit2"
        app:layout_constraintTop_toTopOf="@id/digit2"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp" />

    <ImageView
        android:id="@+id/comma"
        android:layout_width="48dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@id/digit3"
        app:layout_constraintLeft_toRightOf="@id/digit3"
        app:srcCompat="@drawable/wc" />

    <ImageView
        android:id="@+id/digit4"
        android:layout_width="180dp"
        android:layout_height="400dp"
        app:layout_constraintLeft_toRightOf="@id/comma"
        app:layout_constraintTop_toTopOf="@id/digit3"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp" />

    <ImageView
        android:id="@+id/digit5"
        android:layout_width="180dp"
        android:layout_height="400dp"
        app:layout_constraintLeft_toRightOf="@id/digit4"
        app:layout_constraintTop_toTopOf="@id/digit4"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp" />

    <ImageView
        android:id="@+id/digit6"
        android:layout_width="180dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/digit5"
        app:layout_constraintTop_toTopOf="@id/digit5"
        app:srcCompat="@drawable/w0" />

    <TextView
        android:id="@+id/praiseTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="おめでとうございます！！　Congratulations!!"
        android:textSize="50dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/backgroundThird"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="259dp"
        android:layout_height="183dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/depositBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digit6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ninnosuke" />

</androidx.constraintlayout.widget.ConstraintLayout>